--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,10 @@
   "manifest_version": 3,
   "name": "LinkedIn Profile Extractor",
   "version": "1.0",
-  "permissions": [
-    "scripting",
-    "activeTab"
-  ],
-  "action": {
-    "default_popup": "popup.html"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "preview.html",
-        "preview.js"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
-    }
-  ]
+  "permissions": ["scripting", "activeTab", "storage"],
+  "action": { "default_popup": "popup.html" },
+  "web_accessible_resources": [{
+    "resources": ["preview.html", "preview.js"],
+    "matches": ["<all_urls>"]
+  }]
 }
